# glogg

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.fork.md  README.md  TODO.fork.md  colors.schema.json  glogg.pro  glogg.qrc  syntax.schema.json  validate-yaml.py
cmake/: MacOSXBundleInfo.plist.in
config/: gruvbox.glogg-colors.yaml_  misc.glogg-syntax.yaml  solarized.glogg-colors.yaml
sample/: gdb-backtrace  journald  strace
src/: CMakeLists.txt  abstractlogview.cpp  abstractlogview.h  bench.cpp  bench_grep.cpp  cfg.h  cfg_file.cpp  cfg_file.h  color_scheme.cpp  color_scheme.h  colorizer.cpp  colorizer.h  config_node.cpp  config_node.h  configuration.cpp  configuration.h  crawlerwidget.cpp  crawlerwidget.h  dbusexternalcom.cpp  dbusexternalcom.h  encodingspeculator.cpp  enum.cpp  enum.h  exception.cpp  exception.h  externalcom.cpp  externalcom.h  filteredview.cpp  filteredview.h  filtersdialog.cpp  filterset.cpp  filterset.h  fwd.h  gloggapp.cpp  gloggapp.h  highlights.cpp  highlights.h  inotifywatchtowerdriver.cpp  kqueuewatchtowerdriver.cpp  location.cpp  (+71 more)
src/data/: abstractlogdata.h  logdata.cpp  logdata.h  logdataworkerthread.cpp  logfiltereddata.cpp  logfiltereddata.h  logfiltereddataworkerthread.cpp  logfiltereddataworkerthread.h
tests/: CMakeLists.txt  cfgTest.cpp  colorizer_test.cpp  colors_test.cpp  encodingspeculatorTest.cpp  itests.cpp  linepositionarrayTest.cpp  logdataPerfTest.cpp  logdataTest.cpp  logfiltereddataPerfTest.cpp  logfiltereddataTest.cpp  syntax_test.cpp  testlogdata.cpp  testlogfiltereddata.cpp  utests.cpp  watchtowerTest.cpp
